--- a/auth-test.frontend/src/assets/styles/index.scss
+++ b/auth-test.frontend/src/assets/styles/index.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Pathway+Gothic+One&display=swap');
 
 @import './core';
+@import './components/grid';
 
 @tailwind base;
 @tailwind components;
